--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -36,17 +36,20 @@ header {
 
 div.newPost {
     width: 100%;
-    height: 240px;
-    
+    min-height: 240px; /* altura mínima */
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     margin: 50px 0;
     padding: 25px;
-
     background: #fff;
     border-radius: 10px;
-    box-shadow: 1px 0 3px rgba(0,0,0,0.4)
+    box-shadow: 1px 0 3px rgba(0,0,0,0.4);
+    transition: min-height 0.3s ease; /* Transição suave */
+}
+
+.has-media {
+    min-height: 440px; /* Ajuste conforme necessário */
 }
 
 div.newPost div.infoUser {
@@ -226,4 +229,33 @@ ul.posts li.post div.actionBtnPost button.filesPost img {
 
 .share:hover {
     background: rgba(8, 141, 241);
+}
+
+.textareaContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+.mediaPreview {
+    margin-top: 10px; 
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.mediaPreview img, .mediaPreview video {
+    max-width: 100%;
+    max-height: 200px; 
+    border-radius: 10px; 
+    object-fit: cover;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+}
+
+ul.posts li.post img,
+ul.posts li.post video {
+    max-width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    border-radius: 10px;
+    box-shadow: 1px 0 3px rgba(0, 0, 0, 0.4);
+    margin: 5px 0;
 }
